<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:flow_wrapMode="chain"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/editTextTextMultiLine3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="editTextTextMultiLine3"
        tools:layout_editor_absoluteY="109dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.12" />

    <Button
        android:id="@+id/button3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/burgandy"
        android:text="@string/c"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button22"
        app:layout_constraintEnd_toStartOf="@+id/button10"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine3"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button10"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/burgandy"
        android:text="@string/ce"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/button3"
        app:layout_constraintEnd_toStartOf="@+id/button11"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toTopOf="@+id/button3" />

    <Button
        android:id="@+id/button11"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/burgandy"
        android:text="@string/Percent"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/button3"
        app:layout_constraintEnd_toStartOf="@+id/button12"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button10"
        app:layout_constraintTop_toTopOf="@+id/button3" />

    <Button
        android:id="@+id/button12"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/burgandy"
        android:text="@string/divide"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button11"
        app:layout_constraintTop_toTopOf="@+id/button3" />

    <Button
        android:id="@+id/button13"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/burgandy"
        android:text="@string/multiply"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/button22"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button24"
        app:layout_constraintTop_toTopOf="@+id/button22" />

    <Button
        android:id="@+id/button14"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/burgandy"
        android:text="@string/minus"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/button25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button27"
        app:layout_constraintTop_toTopOf="@+id/button25" />

    <Button
        android:id="@+id/button16"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/burgandy"
        android:text="@string/plus"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/button28"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button30"
        app:layout_constraintTop_toTopOf="@+id/button28" />

    <Button
        android:id="@+id/button21"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/burgandy"
        android:text="@string/del"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/button32"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button33"
        app:layout_constraintTop_toTopOf="@+id/button32" />

    <Button
        android:id="@+id/button22"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/_1"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button25"
        app:layout_constraintEnd_toStartOf="@+id/button23"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button23"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/_2"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/button22"
        app:layout_constraintEnd_toStartOf="@+id/button24"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button22"
        app:layout_constraintTop_toTopOf="@+id/button22" />

    <Button
        android:id="@+id/button24"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/_3"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/button22"
        app:layout_constraintEnd_toStartOf="@+id/button13"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button23"
        app:layout_constraintTop_toTopOf="@+id/button22" />

    <Button
        android:id="@+id/button25"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/_4"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button28"
        app:layout_constraintEnd_toStartOf="@+id/button26"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button22"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button26"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/_5"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/button25"
        app:layout_constraintEnd_toStartOf="@+id/button27"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button25"
        app:layout_constraintTop_toTopOf="@+id/button25" />

    <Button
        android:id="@+id/button27"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/_6"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/button25"
        app:layout_constraintEnd_toStartOf="@+id/button14"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button26"
        app:layout_constraintTop_toTopOf="@+id/button25" />

    <Button
        android:id="@+id/button28"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/_7"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button32"
        app:layout_constraintEnd_toStartOf="@+id/button29"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button25"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button29"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/_8"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/button28"
        app:layout_constraintEnd_toStartOf="@+id/button30"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button28"
        app:layout_constraintTop_toTopOf="@+id/button28" />

    <Button
        android:id="@+id/button30"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/_9"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/button28"
        app:layout_constraintEnd_toStartOf="@+id/button16"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button29"
        app:layout_constraintTop_toTopOf="@+id/button28" />

    <Button
        android:id="@+id/button31"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/_0"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/button32"
        app:layout_constraintEnd_toStartOf="@+id/button33"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button32"
        app:layout_constraintTop_toTopOf="@+id/button32" />

    <Button
        android:id="@+id/button32"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/dot"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button31"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button28"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button33"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/equals"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/button32"
        app:layout_constraintEnd_toStartOf="@+id/button21"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button31"
        app:layout_constraintTop_toTopOf="@+id/button32" />

</androidx.constraintlayout.widget.ConstraintLayout>